--- a/config/item-service-dev.properties
+++ b/config/item-service-dev.properties
@@ -1,3 +1,3 @@
-#server.port=8001
-#spring.application.name=item-service
-#eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
+server.port=8001
+spring.application.name=item-service
+eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
