--- a/config/zuul-dev.properties
+++ b/config/zuul-dev.properties
@@ -1,4 +1,5 @@
 spring.application.name=zuul
+spring.cloud.config.override-none=true
 server.port=3001
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
 zuul.routes.item-service=/item-service/**
