--- a/config/zuul-dev.properties
+++ b/config/zuul-dev.properties
@@ -12,3 +12,7 @@ ribbon.ReadTimeOut=1000
 ribbon.MaxAutoReties=1
 ribbon.MaxAutoRetiesNextServer=2
 management.endpoints.web.exposure.include=hystrix.stream
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
