--- a/config/item-service-dev.properties
+++ b/config/item-service-dev.properties
@@ -2,3 +2,7 @@ server.port=8001
 spring.application.name=item-service
 spring.cloud.config.override-none=true
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
