--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -4,3 +4,7 @@ spring.cloud.config.override-none=true
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
 feign.hystrix.enabled=true
 management.endpoints.web.exposure.include=hystrix.stream
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
