--- a/config/user-service-dev.properties
+++ b/config/user-service-dev.properties
@@ -4,3 +4,7 @@ spring.cloud.config.override-none=true
 sp.user-service.users=[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"},{\"id\":99, \"username\":\"aaa\",\"password\":\"111\"}]
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
 management.endpoints.web.exposure.include=refresh
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
