--- a/config/item-service-dev.properties
+++ b/config/item-service-dev.properties
@@ -6,3 +6,4 @@ spring.rabbitmq.host=192.168.64.140
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+spring.rabbitmq.virtual-host=/
