--- a/config/item-service-dev.properties
+++ b/config/item-service-dev.properties
@@ -1,9 +1,11 @@
 server.port=8001
 spring.application.name=item-service
 spring.cloud.config.override-none=true
-eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
 spring.rabbitmq.host=192.168.64.140
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 spring.rabbitmq.virtual-host=/
+eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
