添加eureka显示列表式样配置

--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -1,11 +1,13 @@
 server.port=8201
 spring.application.name=order-service
 spring.cloud.config.override-none=true
-eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
-feign.hystrix.enabled=true
-management.endpoints.web.exposure.include=hystrix.stream
 spring.rabbitmq.host=192.168.64.140
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 spring.rabbitmq.virtual-host=/
+eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
+eureka.instance.prefer-ip-address=ture
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
+feign.hystrix.enabled=true
+management.endpoints.web.exposure.include=hystrix.stream
