--- a/config/zuul-dev.properties
+++ b/config/zuul-dev.properties
@@ -1,6 +1,11 @@
+server.port=3001
 spring.application.name=zuul
 spring.cloud.config.override-none=true
-server.port=3001
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.virtual-host=/
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
 zuul.routes.item-service=/item-service/**
 zuul.routes.user-service=/user-service/**
@@ -12,8 +17,5 @@ ribbon.ReadTimeOut=1000
 ribbon.MaxAutoReties=1
 ribbon.MaxAutoRetiesNextServer=2
 management.endpoints.web.exposure.include=hystrix.stream
-spring.rabbitmq.host=192.168.64.140
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
-spring.rabbitmq.virtual-host=/
+eureka.instance.prefer-ip-address=ture
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
