--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -7,7 +7,7 @@ spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 spring.rabbitmq.virtual-host=/
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
-eureka.instance.prefer-ip-address=ture
+eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 feign.hystrix.enabled=true
 management.endpoints.web.exposure.include=hystrix.stream
