--- a/config/user-service-dev.properties
+++ b/config/user-service-dev.properties
@@ -8,6 +8,6 @@ spring.rabbitmq.virtual-host=/
 spring.cloud.config.override-none=true
 sp.user-service.users=[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"},{\"id\":99, \"username\":\"aaa\",\"password\":\"111\"}]
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka2:2002/eureka
-eureka.instance.prefer-ip-address=ture
+eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 management.endpoints.web.exposure.include=refresh
