--- a/config/zuul-dev.properties
+++ b/config/zuul-dev.properties
@@ -17,5 +17,5 @@ ribbon.ReadTimeOut=1000
 ribbon.MaxAutoReties=1
 ribbon.MaxAutoRetiesNextServer=2
 management.endpoints.web.exposure.include=hystrix.stream
-eureka.instance.prefer-ip-address=ture
+eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
